--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,23 +1,1 @@
-body {
-  @apply font-display;
-}
-
-body,
-p {
-  line-height: 170%;
-}
-
-a {
-  @apply text-black;
-  box-shadow: inset 0 -3px 0 0 theme("colors.primary");
-  transition: box-shadow 0.2s;
-  &:hover {
-    box-shadow: inset 0 -6px 0 0 theme("colors.primary");
-    @apply text-primary;
-  }
-}
-
-a,
-label {
-  @apply inline-block;
-}
+@import "./typographys.scss";
