--- a/src/styles/typographys.scss
+++ b/src/styles/typographys.scss
@@ -45,9 +45,11 @@ body {
 }
 
 // ttnc-logo-img
-.ttnc-logo > img {
-  max-width: 200px;
-  max-height: 60px;
+.ttnc-logo {
+  img {
+    max-width: 200px;
+    max-height: 60px;
+  }
 }
 
 // Navigation
