--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,9 @@
 // @tailwind utilities;
 
 @import "./typographys.scss";
+@import "./lineClamp";
+//
+.tnnc-grid-col-section-hero {
+  grid-template-columns: 5fr 0.5fr 5fr;
+  grid-template-rows: auto;
+}
